force-app/main/default/objects/Gift_Control__c/Gift_Control__c.object-meta.xml
<CustomObject>
    <label>Gift_Control</label>
    <nameField>
        <label>Gift_Control Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>