force-app/main/default/objects/Gift_Control__c/fields/Active_c__c.field-meta.xml
<CustomField>
    <fullName>Active_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active__c</label>
    <type>Checkbox</type>
</CustomField>