force-app/main/default/objects/Gift_Control__c/fields/Gift_Amount__c.field-meta.xml
<CustomField>
    <fullName>Gift_Amount__c</fullName>
    <label>Gift_Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>